Rework more commons-lang usages (#10314)
* Reworks many commons-lang usages to use standard Java
* Updates all remaining commons.lang imports to commons.lang3

Related to openhab/openhab-addons#7722

Signed-off-by: Wouter Born <github@maindrain.net>
Signed-off-by: John Marshall <john.marshall.au@gmail.com>